--- a/package.json
+++ b/package.json
@@ -3,9 +3,15 @@
   "type": "module",
   "exports": {
     ".": "./src/index.ts",
+    "./client": "./src/client.ts",
+    "./proxy": "./src/proxy.ts",
+    "./bundle": "./src/bundle.js",
     "./jsx-runtime": "./src/jsx-runtime.ts",
     "./jsx-dev-runtime": "./src/jsx-runtime.ts"
   },
+  "workspaces": [
+    "examples/*"
+  ],
   "devDependencies": {
     "@types/bun": "latest"
   }
