--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,6 @@
     "moduleDetection": "force",
     "jsx": "react-jsx",
     "allowJs": false,
-    "types": ["zdom"],
 
     // Bundler mode
     "moduleResolution": "bundler",
@@ -29,5 +28,6 @@
     "noUnusedLocals": false,
     "noUnusedParameters": false,
     "noPropertyAccessFromIndexSignature": false
-  }
+  },
+  "includes": ["src"]
 }
