--- a/package.json
+++ b/package.json
@@ -1,46 +1,37 @@
 {
-  "name": "zdom",
-  "type": "module",
-  "version": "0.0.0",
-  "files": ["src/**/*.ts", "out"],
-  "exports": {
-    ".": {
-      "bun": "./src/index.ts",
-      "types": "./src/index.ts",
-      "default": "./out/index.js"
-    },
-    "./client": {
-      "bun": "./src/client.ts",
-      "types": "./src/client.ts",
-      "default": "./out/client.js"
-    },
-    "./proxy": {
-      "bun": "./src/proxy.ts",
-      "types": "./src/proxy.ts",
-      "default": "./out/proxy.js"
-    },
-    "./bundle": {
-      "types": "./src/bundle.d.ts",
-      "default": "./out/bundle.js"
-    },
-    "./jsx-runtime": {
-      "bun": "./src/jsx-runtime.ts",
-      "types": "./src/jsx-runtime.ts",
-      "default": "./out/jsx-runtime.js"
-    },
-    "./jsx-dev-runtime": {
-      "bun": "./src/jsx-runtime.ts",
-      "types": "./src/jsx-runtime.ts",
-      "default": "./out/jsx-runtime.js"
-    }
-  },
-  "workspaces": [
-    "examples/*"
-  ],
-  "scripts": {
-    "gen": "bun scripts/gen.ts"
-  },
-  "devDependencies": {
-    "@types/bun": "latest"
-  }
+	"name": "zdom",
+	"type": "module",
+	"version": "0.0.0",
+	"files": ["src", "out"],
+	"exports": {
+		".": {
+			"bun": "./src/index.ts",
+			"types": "./src/index.ts",
+			"default": "./out/index.js"
+		},
+		"./nojsx": {
+			"bun": "./src/nojsx.ts",
+			"types": "./src/nojsx.ts",
+			"default": "./out/nojsx.js"
+		},
+		"./jsx-runtime": {
+			"bun": "./src/jsx-runtime.ts",
+			"types": "./src/jsx-runtime.ts",
+			"default": "./out/jsx-runtime.js"
+		},
+		"./jsx-dev-runtime": {
+			"bun": "./src/jsx-runtime.ts",
+			"types": "./src/jsx-runtime.ts",
+			"default": "./out/jsx-runtime.js"
+		}
+	},
+	"workspaces": ["examples/*"],
+	"scripts": {
+		"check": "biome check",
+		"check:fix": "biome check --fix",
+		"gen": "bun scripts/gen.ts"
+	},
+	"devDependencies": {
+		"@types/bun": "latest"
+	}
 }
