test(prerender): impl unit test

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,5 +29,5 @@
 		"noUnusedParameters": false,
 		"noPropertyAccessFromIndexSignature": false
 	},
-	"includes": ["src", "bundle"]
+	"includes": ["src", "bundle", "test"]
 }
